--- a/src/index.html
+++ b/src/index.html
@@ -6,6 +6,8 @@
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <script src="assets/echarts.min.js"></script>
+  <script src="assets/china.js"></script>
 </head>
 <body>
   <app-root></app-root>
